# acme-build-tool

./: README.md  acme  changelog.txt  readme.txt  todo.txt
doc/: acme.md
src/: CMakeLists.txt  acme.cmake  acme.config.default.cmake  acme_init.cmake  acme_init_help.txt  consts.cmake  drafts.cmake  include_magic.txt  init.cmake  main.cmake  private.cmake  private_vars.cmake  public.cmake  public_util.cmake  public_vars.cmake  scripts.cmake  t.cmake  templateConfig.cmake  testlib.cmake  todo.txt
test/: run_tests  testing_notes.txt
test/acme/test_build_shared_libs_off/: c.cpp  h.h
test/acme/test_build_shared_libs_on/: c.cpp  h.h
test/acme/test_exe/: acme_find_packages.txt  c.cpp
test/acme/test_shared/: c.cpp  h.h
test/acme/test_standalone_functions/: CMakeLists.txt
test/acme/test_static/: c.cpp
test/common/: add_export_header.cmake  test_debug_postfix.cmake
